# soundstation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
dependencies/macos/: Brewfile
sound440/src/: main.mm
soundstation/: CMakeLists.txt
soundstation/assets/images/: AppIcon.icns
soundstation/assets/imgui/: imgui.ini
soundstation/assets/projects/: Example.ssp
soundstation/assets/shaders/: simple.frag  simple.vert  text.frag  text.vert  texture.frag  texture.vert
soundstation/src/: main.cpp  pch.h
soundstation/src/audio/: audio.h  audiobuffer.cpp  audiobuffer.h  audiodevice.cpp  audiodevice.h  audiodevicelist.cpp  audiodevicelist.h  audiofile.cpp  audiofile.h  audiofilewriter.cpp  audiofilewriter.h
soundstation/src/audio/mixing/: fader.cpp  fader.h
soundstation/src/core/: application.cpp  application.h  assert.cpp  assert.h  image.cpp  image.h  layer.cpp  layer.h  layerstack.cpp  layerstack.h  log.cpp  log.h  platform.cpp  platform.h  project.cpp  project.h  splash.cpp  splash.h  time.cpp  time.h  window.cpp  window.h
soundstation/src/imgui/: buildimgui.cpp  imguilayer.cpp  imguilayer.h
soundstation/src/layers/: audiodevicemanagerlayer.cpp  audiodevicemanagerlayer.h  audiolibrarylayer.cpp  audiolibrarylayer.h  filereaderwriterlayer.cpp  filereaderwriterlayer.h  menubarlayer.cpp  menubarlayer.h  mixerlayer.cpp  mixerlayer.h  playerlayer.cpp  playerlayer.h  projectlayer.cpp  projectlayer.h  toolbarlayer.cpp  toolbarlayer.h
soundstation/src/platform/macos/: macosaudio.h  macosaudio.mm  macosaudiodevice.h  macosaudiodevice.mm  macosaudiodevicelist.h  macosaudiodevicelist.mm  macosplatform.mm
soundstation/src/platform/opengl/: openglbuffer.cpp  openglbuffer.h  openglcontext.cpp  openglcontext.h  openglerror.h  openglframebuffer.cpp  openglframebuffer.h  openglrenderapi.cpp  openglrenderapi.h  openglshader.cpp  openglshader.h  opengltexture.cpp  opengltexture.h
soundstation/src/renderer/: buffer.cpp  buffer.h  framebuffer.cpp  framebuffer.h  rendercommand.cpp  rendercommand.h  renderer.cpp  renderer.h  shader.h  textrenderer.cpp  textrenderer.h  texture.cpp  texture.h
soundstation/src/serializer/: serializer.cpp  serializer.h
tests/: CMakeLists.txt
tests/sound440/: CMakeLists.txt
